--- a/blog.htm
+++ b/blog.htm
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aquí vamos a hacer un blog</h1>
-    <p>Y este es el párrafo de inicio</p>
+    <div id="container">
+        <div id="post"></div>
+        <h1>Este es el título atractivo del post</h1>
+        <p>Y este es el párrafo de en el que se realizan las explicaciones</p>
+    </div>
 </body>
 </html>
