--- a/blog.htm
+++ b/blog.htm
@@ -9,9 +9,16 @@
 </head>
 <body>
     <div id="container">
-        <div id="post"></div>
-        <h1>Este es el título atractivo del post</h1>
-        <p>Y este es el párrafo de en el que se realizan las explicaciones</p>
+        <div id="cabecera">Hyperblog 
+            <span id="tagline">
+                Tu blog de confianza
+            </span>
+        </div>
+        <div id="post">
+            <h1>Este es el título atractivo del post</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum autem amet vitae repudiandae distinctio eum cupiditate harum, odio rerum accusantium facere eligendi? Doloribus possimus repellendus, corporis ab inventore nobis dolor!</p>
+        </div>
     </div>
+
 </body>
 </html>
