Se agregó un párrafo y se cambió la tipografía

--- a/blog.htm
+++ b/blog.htm
@@ -10,5 +10,6 @@
 <body>
     <h1>Aquí vamos a hacer un blog</h1>
     <p>Y este es el párrafo de inicio</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur dolorem dicta neque explicabo. Deleniti pariatur aliquam esse necessitatibus doloremque? Aliquid odio nisi dicta quis itaque, necessitatibus esse reiciendis? Molestiae, molestias.</p>
 </body>
 </html>
