--- a/blog.htm
+++ b/blog.htm
@@ -17,6 +17,7 @@
         <div id="post">
             <h1>Este es el título atractivo del post</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum autem amet vitae repudiandae distinctio eum cupiditate harum, odio rerum accusantium facere eligendi? Doloribus possimus repellendus, corporis ab inventore nobis dolor!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptas non adipisci ut dicta nam ducimus velit, ratione quasi alias ipsa eos quo amet vitae laborum doloribus cumque ea quae!</p>
         </div>
     </div>
 
