--- a/blog.htm
+++ b/blog.htm
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id="container">
-        <div id="cabecera">Hyperblog 
+        <div id="cabecera">
+            <img id="logo" src="./imagenes/dragon.png" >
+            Hyperblog 
             <span id="tagline">
                 Tu blog maestro
             </span>
