--- a/blog.htm
+++ b/blog.htm
@@ -20,6 +20,7 @@
             <h1>Este es el título atractivo del post</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum autem amet vitae repudiandae distinctio eum cupiditate harum, odio rerum accusantium facere eligendi? Doloribus possimus repellendus, corporis ab inventore nobis dolor!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptas non adipisci ut dicta nam ducimus velit, ratione quasi alias ipsa eos quo amet vitae laborum doloribus cumque ea quae!</p>
+            <p style="text-align: center;"><img src="https://static.platzi.com/media/user_upload/pull_push-900f38af-6a0f-43cf-86f6-4b1f7ce4ab9d.jpg" width="500" height="500" ></p>
             <p>Suscríbete y dale like</p>
         </div>
         <div id="footer">Hecho con amor por mí GGG</div>
